# BojackQuotesBot

./: Cargo.toml  quotes.psv
src/: main.rs
