[package]
name = "bojack_quotes"
version = "0.1.0"
authors = ["Jonathan Scanzi <kratosjon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telebot = "0.3"
tokio-core = "0.1"
futures = "0.1"
rand = "0.7"
regex = "1"