[package]
name = "bojack_quotes"
version = "0.1.0"
authors = ["Jonathan Scanzi <kratosjon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telebot = "0.3.1"
tokio-core = "0.1"
tokio = { version = "0.2", features = ["full"]}
futures = "0.1"
rand = "0.7"
regex = "1"
lazy_static = "1.4.0"
telegram-bot = "0.6"


[profile.release]
codegen-units = 1 # better optimizations
lto = 'fat' # Overkill lto
debug = false # do not generate debug symbols (no perf penalty but makes binary smaller)
panic = 'abort' # scales down regular rust panic handling (potentially dangerous for crates that use panics)